<resources>
    <string name="app_name">PokeApp</string>
    <string name="google">Sign in with Google</string>
    <string name="facebook">Sign in with Facebook</string>
    <string name="facebook_app_id">1846802455459039</string>
    <string name="fb_login_protocol_scheme">fb1846802455459039</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="nombreRegion">Región</string>
    <string name="regiones">Regiones</string>
    <string name="no_region">No hay regiones para mostrar.</string>
    <string name="appname">Poke App</string>
    <string name="pokemons">Pokemons</string>
    <string name="vermas">Ver más</string>
    <string name="nombre_pokemon">Pikachu</string>
    <string name="equipos">Equipos</string>

</resources>