<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/ghost_white"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="191dp"
        android:src="@mipmap/pokeball"
        app:layout_constraintBottom_toTopOf="@+id/googlebutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509" />

    <Button
        android:id="@+id/googlebutton"
        android:layout_width="270dp"
        android:layout_height="49dp"
        android:backgroundTint="@android:color/white"
        android:drawableLeft="@mipmap/google"
        android:elevation="10dp"
        android:text="@string/google"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/fbbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <Button
        android:id="@+id/fbbutton"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:backgroundTint="@color/fb_blue"
        android:drawableLeft="@mipmap/facebook"
        android:elevation="10dp"
        android:text="@string/facebook"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/googlebutton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.768" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appname"
        android:fontFamily="@font/pokemon"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.683" />

</androidx.constraintlayout.widget.ConstraintLayout>
